# static_allocator

./: .allocator.project  CMakeLists.txt
include/: allocator.h
project/: free.dia  malloc.dia
src/: CMakeLists.txt  allocator.c
test/: CMakeLists.txt  test_bitmap.c  test_main.c
